--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,8 @@
         font-family: "Inter", sans-serif;
       }
     </style>
-
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2158539159904869"
+     crossorigin="anonymous"></script>
     <title>The FitClub Gym App</title>
   </head>
   <body>
